Kubernetes-deployment/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
        - name: canary-container
          image: argoproj/rollouts-demo:blue
          ports:
            - containerPort: 8080
