Kubernetes-deployment/primary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: primary-deployment
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: primary
  template:
    metadata:
      labels:
        app: primary
    spec:
      containers:
        - name: primary-container
          image: argoproj/rollouts-demo:green
          ports:
            - containerPort: 8080
