Kubernetes-deployment/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-canary
  namespace: default
spec:
  selector:
    app: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
