Kubernetes-deployment/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-redis
  namespace: default
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
